fixed a bug with textareas being too wide for mobile screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -356,3 +356,7 @@ blockquote{
 		display: none;
 	}
 }
+
+textarea{
+	max-width: 100%;
+}
